compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyFileRoots.out
compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyUsage.kt:5:12: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type '@Nullable() String?'.
    a.bar().length
           ^
COMPILATION_ERROR
